<resources>
    <string name="app_name">Location Reminder</string>
    <string name="app_email">developer.locationalarmsystem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_type">Map Type</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="active_alarms">Active Alarms</string>
    <string name="rate_app">Rate App</string>
    <string name="share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="exit_question">Are you sure you want to exit?</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="select_location">Select Location</string>
    <string name="saved_alarms">Saved Alarms</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="location_coordinates">Location Coordinates</string>
    <string name="name">Name</string>
    <string name="range_in_meters">Range (in meters)</string>
    <string name="enter_message">Enter Message</string>
    <string name="vibration">Vibration</string>
    <string name="ringtone">Ringtone:</string>
    <string name="empty">Empty</string>
</resources>
