<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/colorPrimary"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location_coordinates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/location_coordinates"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_pin_drop_black_36dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/alarm_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textColor="#333"
                android:textColorHint="#666"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/range_in_meters"
                android:inputType="number"
                android:textColor="#333"
                android:textColorHint="#666"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_message"
                android:textColor="#333"
                android:textColorHint="#666"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <CheckBox
        android:id="@+id/vibration"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/vibration"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/ringtone"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/ringtone"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>